Angular Material を導入した

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
     />
 </div>
 
-<button (click)="updateStatus()">{{buttonLabel}}</button>
+<button md-raised-button (click)="updateStatus()">{{buttonLabel}}</button>
+<md-checkbox>Check me!</md-checkbox>
 
 <h2>Here are some links to help you start: </h2>
 <ul>
