URL パラメーターで md ファイルを指定できるようにした

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <md-toolbar color="primary">
     <a routerLink="/">Welcome to {{title}}!!</a>
     <a md-raised-button routerLink="/page1">page1</a>
-    <a md-raised-button routerLink="/page2">page2</a>
+    <a md-raised-button routerLink="/page2/test.md">page2</a>
 </md-toolbar>
 
 <router-outlet></router-outlet>
