--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,18 @@
 body {
     margin: 0;
 }
+
+markdown h1 {
+    counter-reset: h2counter;
+}
+
+markdown h2:before {
+    content: counter(h2counter) ". ";
+    counter-increment: h2counter;
+    counter-reset: h3counter;
+}
+
+markdown h3:before {
+    content: counter(h2counter) "." counter(h3counter) ". ";
+    counter-increment: h3counter;
+}
