Markdown の編集画面を追加した。
flex-layout を追加したところ vendor.bundle.js のサイズが 6 MB になり、うまくプレビューできなくなってしまった

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,6 @@
     <a md-raised-button routerLink="/page2/test.md">page2</a>
 </md-toolbar>
 
-<router-outlet></router-outlet>
+<div class="content">
+    <router-outlet></router-outlet>
+</div>
