--- a/src/app/page1/page1.component.html
+++ b/src/app/page1/page1.component.html
@@ -9,6 +9,14 @@
         </md-grid-tile>
 
         <md-grid-tile colspan="2">
+            <md-card>
+                <md-card-header>
+                    header
+                </md-card-header>
+                <md-card-content>
+                    content
+                </md-card-content>
+            </md-card>
         </md-grid-tile>
 
         <md-grid-tile colspan="2">
